--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <style>
-        .heading {
-            font-weight: bold;
-            font-size: 30px;
-        }
-
-        .para{
-            font-size: 30px;
+        p{
+            font-weight: lighter;
         }
     </style>
 </head>
