--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
         p{
             font-weight: lighter;
         }
+
+        .para{
+            border: 1px solid rgb(207, 85, 207);
+            font-size: 20px;
+            height: 50px;
+            width: 200px;
+            text-align: center;
+            padding-top: 25px;
+        }
     </style>
 </head>
 <body>
